# tutor-recommendation

./: .gitignore  AGENTS.md  README.md  build_teacher_match.py  checkpoint_doctor.py  complete_teacher_research.py  migrate_contact_status_column.py  pyproject.toml  requirements.txt  result_quality_audit.py  start_viewer.bat  start_viewer.sh  supplement_web_search_research.py  sync_contact_status_to_workbooks.py  tutor.py  update_teacher_match_with_dblp.py  validation_compare.py  validation_sampler.py  viewer_server.py
docs/: agent-workflow.md  handoff.md  hermes-agent-evaluation-2026-07-11.md  output-organization.md  runbook.md  teacher-matching-workflow.md  viewer-calendar-strip-todo.md  viewer-integrated-layout-todo.md  viewer-integrated-layout.md  viewer-ux-performance-todo.md  web-search-supplement.md
scripts/: README.md  start_viewer.bat  start_viewer.sh
tests/: test_agent_cli.py  test_arxiv_metadata.py  test_checkpoint_doctor_publications.py  test_collector_registry.py  test_completion_checkpoint.py  test_contact_status.py  test_math_publication_passthrough.py  test_math_publication_research.py  test_private_paths.py  test_private_workspace.py  test_profile_registry.py  test_publication_adapters.py  test_publication_evidence.py  test_publication_http.py  test_publication_identity.py  test_ranking_policy.py  test_ruc_isbd_collector.py  test_run_manifest.py  test_seu_affiliation.py  test_shadow_output_exclusion.py  test_student_profile.py  test_teacher_identity.py  test_viewer_data_cache.py  test_viewer_launcher.py  test_viewer_layout.py  test_viewer_security.py
(+58 files in other folders)
