[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tutor-recommendation"
version = "0.1.0"
description = "Agent-first, auditable tutor recommendation workflow"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "openpyxl",
  "requests",
  "beautifulsoup4",
  "pypinyin",
  "PyMuPDF",
]

[project.scripts]
tutor = "tutor_recommendation.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
